Ensure 403/404 pages look OK, add extra spacing in menu lists

--- a/themes/cp_theme_d10/css/menu.css
+++ b/themes/cp_theme_d10/css/menu.css
@@ -97,7 +97,7 @@
       padding-right: 1rem;
       
       & > div {
-        width: 20%;
+        width: 19%;
       }
     }
   }
